test/rbkt/Queries/zorba/error/error3.xq
fn:error(fn:QName('http://www.w3.org/2005/xqt-errors', 'err:XPST0005'), "my error !")